syntax = "proto3";

package node;

message Peer{
    string priv_ip = 1;
    string pub_ip = 2;
    string name = 3;
    string friend = 4;
}

message NodeList{
    repeated Node nodes = 1;
}

message Response{
    string status = 1;
}

message Node{
    repeated string nodes = 1;
    int32 notify_others = 2;
}

service LoadBalancer{
    rpc RegisterNode(Node) returns(NodeList) {}
}

service Server{
    rpc NodeDown(Node) returns(Response) {}
    rpc PeerArrival(Peer) returns(Response) {}
    rpc PeerRemoval(Peer) returns(Response) {}
}

